	character.

    o	nlm() returns the number of iterations used [from J.Lindsey].

    o	cut, diff, hist, mean, quantile, seq, trunc()  are now all generic.
	cut() has an `include.lowest' argument as S.

    o	save.image() as short-cut to save the current session in .RData.

    o   new design of HTML help pages, including an index of all
	functions from all installed packages.

BUG FIXES (many of which resulted from the added features...)

    o   Rd files: leading whitespace of lines in user-defined sections
	was not correctly removed by Rdconv

    o   sign(.) works again.

    o   [.data.frame segfaulted if arg. wasn't a data frame

    o   "R --no-readline" now again gives proper prompts.

    o   demos/zero.R  dyn.load(.) now should be working more easily.

    o   mode(.) now returns "(" for a "parentheses 'call'".

    o   Bug fix in mva dist.c for method binary (gave "invalid distance").

    o	R INSTALL should work (again) now when `pkg' is a relative file
	name.

    o	.not.yet.implemented() now takes an arbitrary number of args.

    o   Plotting of dendrograms is working again.

    o   data.frame(.) now uses "1:n" as default row.names.

    o   image(.) and contour(.) now also work called as, e.g., ``image(z)''.

    o   the first argument of axis(.) is now called `side' as in S.

    o   format(NULL) now works.

    o	minor fix in symnum.

    o	hist() now is more compatible to S, has a new `labels' argument,
	and should work ok for non-equidistant breaks.

    o	plot(-1) now labels properly.

    o	Many small code changes (eliminating extraneous variables, nested comm.)
	in C code in order to satisfy `gcc -Wall' [Doug Bates].


		CHANGES IN R VERSION 0.61.2

BUG FIXES

    o   pretty(999) resulted in an infinite loop due to integer overflow.
	pretty(.) now sometimes returns different results than before.

    o   pi:6  returned integer, instead of real.

    o	[.data.frame caused segfault if called with non-dataframe argument
