@@ -4,12 +4,14 @@
 edit(name=NULL, file="", editor = "vi")
 vi(name=NULL, file="")
 emacs(name=NULL, file="")
+pico(name=NULL, file="")
 xemacs(name=NULL, file="")
 xedit(name=NULL, file="")
 }
 \alias{edit}
 \alias{vi}
 \alias{emacs}
+\alias{pico}
 \alias{xemacs}
 \alias{xedit}
 \arguments{
